--- a/http-go-based/Chart.yaml
+++ b/http-go-based/Chart.yaml
@@ -1,6 +1,10 @@
 apiVersion: v2
 name: http-go-based
 description: A Helm chart for Kubernetes
+dependencies:
+- name: redis
+  version: "0.1.0"
+  repository: "file://http-go-based/redis"
 
 # A chart can be either an 'application' or a 'library' chart.
 #
