--- a/http-go-based/values.yaml
+++ b/http-go-based/values.yaml
@@ -2,13 +2,13 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 2
 
 image:
   repository: acrworkflow1672133156031.azurecr.io/http-go-code
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "1"
 
 imagePullSecrets: []
 nameOverride: ""
