--- a/http-go-based/values.yaml
+++ b/http-go-based/values.yaml
@@ -75,7 +75,7 @@ autoscaling:
   targetCPUUtilizationPercentage: 90
   # targetMemoryUtilizationPercentage: 80
 
-nodeSelector: {}
+nodeSelector: {'chaos': 'chaos'}
 
 tolerations: []
 
