--- a/http-go-based/templates/deployment.yaml
+++ b/http-go-based/templates/deployment.yaml
@@ -32,6 +32,9 @@ spec:
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          env:
+          - name: GOMAXPROCS
+            value: "2"          
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
